# imdb

./: .gitignore  README.md  add_to_movie_list.py  add_to_movie_list_new.ipynb  add_to_movie_list_new2.py  add_to_movie_list_new_2.ipynb  cheat_sheet.txt  cleaning_dataset_note.txt  compile_movie_list.ipynb  compile_movie_list.py  conda_env  conda_env_explicit_p3122.txt  data_exploration.ipynb  download_imdb_files.py  explorative_analysis.ipynb  finding_new_movies.ipynb  generate_dataset.py  if_i_could_start_over.md  imdb_files.drawio  logging_test.py  main.html  main.py  pyproject.toml  quick_stats.ipynb  readme  step_1_generating_dataset.ipynb  step_2_processing_dataset.ipynb  step_3_data_mining.ipynb  test.ipynb  todo  update_all.sh  update_all_files.py
data/backup/: raw_status.xlsx
data/handcrafted/: add_movies_second_opinion.txt  add_movies_seen.txt  add_movies_unseen.txt  gebleven_bij.txt  (+2 more)
database/: notes.txt
docs/: commands.md  log.md  sources.md  vscode_extensions.txt
imdb/: hello.py
notebooks/: check_if_in_index.ipynb  convert_old_data.ipynb  test.csv
old/: add_movie_to_list v2.ipynb  add_movie_to_list v3.ipynb  add_movie_to_list.ipynb  analyse_movies.ipynb  analyse_movies.py  compile_movie_list.ipynb  database_research.ipynb  generate_dataset_backup.py  ids_to_info.ipynb  learning.ipynb  progress_bar_test.py  raw_to_db v2.backup.ipynb  raw_to_db v2.ipynb  raw_to_db.backup.ipynb  raw_to_db.ipynb  step_4_machine_learning.ipynb  test.ipynb  test2.ipynb  test3.ipynb  test4.ipynb  update_all_files copy.py  update_all_files.py  update_movie_list.ipynb
(+24 files in other folders)
