[project]
name = "imdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pypdl>=1.5.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
